--- a/form/css/form.css
+++ b/form/css/form.css
@@ -10,12 +10,19 @@
 
 .form input {
 	float: left;
-	height: 30px;
 	text-indent: 10px;
 	border:1px solid #999;
 	float: left;
 	background: #f9f9f9;
 	margin: 5px 1% ;
+}
+
+.form input:not(.btn) {
+	height: 30px;
+}
+
+.form input[type="search"] {
+	box-sizing:border-box;
 }
 
 .form .input-1 {
@@ -41,7 +48,7 @@
 	resize: none;
 }
 
-.form .btn-env {
+.form .btn.env {
 	border: 0px;
 	background:#11AA00;
 	color: #fff;
@@ -51,11 +58,11 @@
 	text-indent: 0px;
 }
 
-.form .btn-env:hover {
+.form .btn.env:hover {
 	background:#00D405;
 }
 
-.form .btn-lmp {
+.form .btn.lmp {
 	border: 0px;
 	background:#DB0C19;
 	color: #fff;
@@ -65,7 +72,7 @@
 	text-indent: 0px;
 }
 
-.form .btn-lmp:hover {
+.form .btn.lmp:hover {
 	background:#F15555;
 }
 
